# est5525

./: .gitignore  README.md  pyproject.toml
monograph/: it-stats.ipynb
notebooks/: l2-q4.ipynb  l3-q3.ipynb  l4-q5.ipynb  l5-q1.ipynb
