[tool.poetry]
name = "EST5525"
version = "0.1.0"
description = "Stochastic processes (EST5525) assignments."
authors = ["Mateus Otto <mateus.potto@usp.br>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.21.2"
matplotlib = "^3.4.3"
scipy = "^1.7.1"
pandas = "^1.3.2"
jupyter = "^1.0.0"
jupyterlab = "^3.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
